--- a/DB-Python-Workshop-2016-02-18.ipynb
+++ b/DB-Python-Workshop-2016-02-18.ipynb
@@ -91,11 +91,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "words: ['Thanks', 'for', 'coming', 'to', 'this', 'python', 'workshop!', 'I', 'think', 'python', 'is', 'a', 'neat', 'language.']\n"
+     ]
+    }
+   ],
    "source": [
     "sentence = \"Thanks for coming to this python workshop! I think python is a neat language.\"\n",
     "# by default, split() uses whitespace as delimiters\n",
@@ -105,11 +113,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorted words: ['I', 'Thanks', 'a', 'coming', 'for', 'is', 'language.', 'neat', 'python', 'python', 'think', 'this', 'to', 'workshop!']\n"
+     ]
+    }
+   ],
    "source": [
     "sorted_words = sorted(words)\n",
     "print \"sorted words:\", sorted_words"
@@ -117,11 +133,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "sorted words by length: ['I', 'a', 'to', 'is', 'for', 'this', 'neat', 'think', 'Thanks', 'coming', 'python', 'python', 'workshop!', 'language.']\n"
+     ]
+    }
+   ],
    "source": [
     "sorted_words_by_length = sorted(words, key=len)\n",
     "print \"sorted words by length:\", sorted_words_by_length"
@@ -129,11 +153,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "reversed: ['workshop!', 'language.', 'Thanks', 'coming', 'python', 'python', 'think', 'this', 'neat', 'for', 'to', 'is', 'I', 'a']\n"
+     ]
+    }
+   ],
    "source": [
     "sorted_words_by_length_rev = sorted(words, key=len, reverse=True)\n",
     "print \"reversed:\", sorted_words_by_length_rev"
@@ -152,11 +184,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hi my name is Simon\n",
+      "y name is Simon\n",
+      "Hi my na\n"
+     ]
+    }
+   ],
    "source": [
     "introduction = \"Hi my name is Simon\"\n",
     "# get the whole string\n",
@@ -169,11 +211,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'H ynm sSmn'"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# get every other letter\n",
     "introduction[::2]"
@@ -181,11 +234,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'nomiS si eman ym iH'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# reverse the string\n",
     "introduction[::-1]"
@@ -193,11 +257,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8, 10, 12, 14, 16, 18]\n"
+     ]
+    }
+   ],
    "source": [
     "# Also works in range()\n",
     "print range(0,20,2)"
@@ -215,11 +287,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bag of words: set(['Simon', 'is', 'Hi', 'My', 'Name'])\n"
+     ]
+    }
+   ],
    "source": [
     "repeats = \"Hi Hi My My Name Name is is Simon Simon\"\n",
     "bag_of_words = set(repeats.split())\n",
@@ -228,11 +308,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "set(['b', 'e', 'k', 'o', 'p', 'r'])\n"
+     ]
+    }
+   ],
    "source": [
     "word = \"bookkeeper\"\n",
     "print set(word)"
@@ -252,11 +340,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
    "source": [
     "# Making a list of perfect squares\n",
     "squares = []\n",
@@ -268,11 +364,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 1, 4, 9, 16, 25, 36, 49, 64, 81]\n"
+     ]
+    }
+   ],
    "source": [
     "squares_lc = [i * i for i in range(10)]\n",
     "print squares_lc"
@@ -288,11 +392,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simon says, \"I am full\"\n"
+     ]
+    }
+   ],
    "source": [
     "simon_is_hungry = False\n",
     "\n",
@@ -306,11 +418,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Simon says, \"I am full\"\n"
+     ]
+    }
+   ],
    "source": [
     "words = '\"Give me food!\"' if simon_is_hungry else '\"I am full\"'\n",
     "print \"Simon says,\", words"
@@ -326,11 +446,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 4, 16, 36, 64]\n"
+     ]
+    }
+   ],
    "source": [
     "squares = [x*x for x in range(10) if x % 2 == 0]\n",
     "print squares"
@@ -355,11 +483,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('A', 'B')\n",
+      "('A', 'C')\n",
+      "('A', 'D')\n",
+      "('B', 'A')\n",
+      "('B', 'C')\n",
+      "('B', 'D')\n",
+      "('C', 'A')\n",
+      "('C', 'B')\n",
+      "('C', 'D')\n",
+      "('D', 'A')\n",
+      "('D', 'B')\n",
+      "('D', 'C')\n"
+     ]
+    }
+   ],
    "source": [
     "import itertools\n",
     "\n",
@@ -370,11 +517,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "('A', 'B')\n",
+      "('A', 'C')\n",
+      "('A', 'D')\n",
+      "('B', 'C')\n",
+      "('B', 'D')\n",
+      "('C', 'D')\n"
+     ]
+    }
+   ],
    "source": [
     "combos = itertools.combinations(\"ABCD\", 2)\n",
     "for c in combos:\n",
@@ -383,11 +543,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<itertools.combinations object at 0x104663578>\n"
+     ]
+    }
+   ],
    "source": [
     "# what is this?\n",
     "print combos"
@@ -415,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {
     "collapsed": false
    },
@@ -437,11 +605,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "r: 1\n",
+      "y: <generator object count_using_yield at 0x104644cd0>\n"
+     ]
+    }
+   ],
    "source": [
     "r = count_using_return()\n",
     "print \"r:\", r\n",
@@ -451,11 +628,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "for c in count_using_yield():\n",
     "    print c"
@@ -480,11 +674,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 22,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<type 'list'>\n",
+      "<type 'xrange'>\n"
+     ]
+    }
+   ],
    "source": [
     "print type(range(10))\n",
     "print type(xrange(10))"
