added some minor bullet points

--- a/workshop.ipynb
+++ b/workshop.ipynb
@@ -53,6 +53,7 @@
     "- basic python syntax (for loops, variable declarations, strings)\n",
     "- basic python data structures (lists, dictionaries)\n",
     "- how to write functions in python\n",
+    "- `len`, `range`, basic built in functions\n",
     "\n",
     "## What is this workshop\n",
     "\n",
@@ -68,13 +69,15 @@
     "- Why I like python\n",
     "    - \"batteries included\"\n",
     "    - lots of features, but the syntax stays out of your way\n",
-    "    - lots of mature libraries\n",
-    "    - It's fun (name origin, code feels clean)"
+    "    - lots of mature libraries for doing anything from web apps to natural language processing\n",
+    "    - code feels clean\n",
+    "    - usable in job interviews\n",
+    "    - It's fun "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -990,6 +993,7 @@
     "Beautiful thing about python is that other people like it and build libraries to do useful stuff for it.\n",
     "\n",
     "- Django, Flask (web frameworks)\n",
+    "    - Pinterest, Bitbucket built on Django\n",
     "- BeautifulSoup (scraping websites)\n",
     "- numpy, matplotlib, jupyter (numerical/scientific computing)\n",
     "- nltk (natural language processing)\n",
@@ -1068,7 +1072,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.10"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
